--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -42,7 +42,7 @@
     <div id="approvalsContainer" class="row g-3"></div>
   </div>
   <script>
-    const API = 'http://localhost:5000/api';
+    const API = 'https://fitness-challenge-tracker.onrender.com/api';
     const token = localStorage.getItem('token');
     const role = localStorage.getItem('role');
     const approvalsContainer = document.getElementById('approvalsContainer');
