--- a/frontend/challenge.html
+++ b/frontend/challenge.html
@@ -86,7 +86,7 @@
   </div>
 
   <script>
-    const API = 'http://localhost:5000/api';
+    const API = 'https://fitness-challenge-tracker.onrender.com/api';
     const token = localStorage.getItem('token');
     const role = localStorage.getItem('role');
 
