--- a/frontend/login.html
+++ b/frontend/login.html
@@ -112,7 +112,7 @@
         loginBtnText.textContent = 'Signing in...';
         loginSpinner.classList.remove('d-none');
         
-        const response = await fetch('http://localhost:5000/api/auth/login', {
+        const response = await fetch('https://fitness-challenge-tracker.onrender.com/api/auth/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
