--- a/frontend/register.html
+++ b/frontend/register.html
@@ -160,7 +160,7 @@
         registerBtnText.textContent = 'Creating Account...';
         registerSpinner.classList.remove('d-none');
         
-        const response = await fetch('http://localhost:5000/api/auth/register', {
+        const response = await fetch('https://fitness-challenge-tracker.onrender.com/api/auth/register', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
